[package]
name = "meme-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.16.0"
reqwest = { version = "0.11.9", features = ['blocking', 'json'] } 
serde = { version = "1.0.136", features = ['derive']} 
serde_json = "1.0.79"
open = "2.0.3"
image = "0.24.0"